Fixing of typos, few normal answers rewritten/clarified

--- a/Lab 6/prelab6.tex
+++ b/Lab 6/prelab6.tex
@@ -14,7 +14,7 @@ Use the following resources to prepare yourself for this lab session:
 \begin{questions}
 	\q{1}{Describe the difference between a LAN switch/bridge and a router?}
 	\q{2}{What is the difference between an Ethernet switch and an Ethernet hub? Which is more suitable for a network with a high traffic load, a switch or a hub? Explain.}
-	\q{3}{What motivates the use of the term “transparent” in transparent bridges?}
+	\q{3}{What motivates the use of the term "transparent" in transparent bridges?}
 	\q{4}{Which role does the spanning tree protocol play when interconnecting LAN switches/bridges?}
 	\q{5.a}{In the context of the IEEE 802.1d specification of the spanning tree protocol, define root bridge.}
 	\q{5.b}{In the context of the IEEE 802.1d specification of the spanning tree protocol, define root port.}
