--- a/Lab 6/solutions/lab6/2.3.tex
+++ b/Lab 6/solutions/lab6/2.3.tex
@@ -1,1 +1,1 @@
-For the same reason as before, the interfaces of Router1 are linked to the bridge interface. Therefor, they don't function as they would normally do.
+Because of the same reason as before. The interfaces of Router1 are linked to the bridge interface. Therefore, they don't function as they would normally do.
