--- a/Lab 6/solutions/lab6/3.A.tex
+++ b/Lab 6/solutions/lab6/3.A.tex
@@ -1,4 +1,4 @@
 On PC1, 2 extra collisions occured on interface eth0. \\
 On PC3, 8 extra collisions occured on interface eth0. \\ \\
 
-The collisions are caused by the flooding of pings in the ethernet hubs. Because the icmp packets are sent over the whole network topology, collisions with the icmp packets between PC3 and PC4 might occur.
+The collisions are caused by the flooding of pings in the ethernet hubs. Because the ICMP packets are sent over the whole network topology, collisions with the ICMP packets between PC3 and PC4 might occur.
