--- a/Lab 6/solutions/prelab6/4.tex
+++ b/Lab 6/solutions/prelab6/4.tex
@@ -1,1 +1,1 @@
-The Spanning Tree Protocol (STP, IEEE802.1D) ensures that in a bridged network, no bridge loops occur. This then prevents a phenomnenon called a broadcast storm: an infinite loop which would occur if two bridges between two networks would keep passing on the same message, saturating the network.
+The Spanning Tree Protocol (STP, IEEE802.1D) ensures that in a bridged network, no bridge loops occur. This then prevents a phenomenon called a broadcast storm: an infinite loop which would occur if two bridges between two networks would keep passing on the same message, saturating the network.
