--- a/Lab 6/solutions/prelab6/5.c.tex
+++ b/Lab 6/solutions/prelab6/5.c.tex
@@ -1,1 +1,1 @@
-The designated bridge for a lan is the bridge of which the designated port for said lan is a part. (The root is the designated bridge for all of its connected LANs)
+The designated bridge for a LAN is the bridge of which the designated port for said LAN is a part of. (The root is the designated bridge for all of its connected LANs)
