--- a/Lab 6/solutions/lab6/1.C.4.tex
+++ b/Lab 6/solutions/lab6/1.C.4.tex
@@ -1,1 +1,1 @@
-The ping command is not succesful, because the 2 PCs are located in different subnets. PC2 is only configured as a bridge, and can therefor not route the packets appropriately.
+The ping command is not succesful, because the 2 PCs are located in different subnets. PC2 is only configured as a bridge, and can therefore not route the packets appropriately.
