--- a/Lab 6/solutions/lab6/3.B.tex
+++ b/Lab 6/solutions/lab6/3.B.tex
@@ -1,1 +1,1 @@
-In this exercise, the flooding of the packets does not reach the network segment with PC3 and PC4. This is prevented by the router (aka switch). The router does not forward the icmp packets between PC1 and PC2 to his other interface.
+In this exercise, the flooding of the packets does not reach the network segment with PC3 and PC4. This is prevented by the router. The router does not forward the ICMP packets between PC1 and PC2 to his other interface.
