--- a/Lab 7/solutions/lab7/1.C.a.tex
+++ b/Lab 7/solutions/lab7/1.C.a.tex
@@ -1,5 +1,5 @@
 The first ping/telnet session succeeds because the two machines are connected to each other with a hub. \\
-The second ping/telnet session is successful because the address of PC1 is translated by PC2 before going to PC4, when PC4 sends a packet back, PC2 translates the address back to that of PC1. \\
+The second ping/telnet session is successful because the address of PC1 is translated by PC2 before going to PC4. When PC4 sends a packet back, PC2 translates the address back to that of PC1. \\
 The third ping/telnet session is successful because the two machines are connected to each other with a hub. \\
-The fourth ping/telnet session is successful because the address of Router1 is translated by PC2 before going to PC4, when PC4 sends a packet back, PC2 translates the address back to that of Router1. \\
+The fourth ping/telnet session is successful because the address of Router1 is translated by PC2 before going to PC4. When PC4 sends a packet back, PC2 translates the address back to that of Router1. \\
 Only the last ping/telnet session fails, because PC4 has no information on how to route the packet to private network addresses.
