--- a/Lab 7/solutions/lab7/2.C.2.b.tex
+++ b/Lab 7/solutions/lab7/2.C.2.b.tex
@@ -1,1 +1,1 @@
-Initially the client sends a DHCP Discover packet, with source $0.0.0.0$ and destination $255.255.255.255$. After that, the DHCP server offers the client an ip address. Subsequently the client sends a DHCP Request packet. Finally the server sends a DHCP Ack packet. After this, the client will use the offered ip address.
+Initially the client sends a DHCP Discover packet, with source $0.0.0.0$ and destination $255.255.255.255$. After that, the DHCP server offers the client an IP address. Subsequently the client sends a DHCP Request packet. Finally the server sends a DHCP ACK packet. After this, the client will use the offered IP address.
