--- a/Lab 7/solutions/lab7/2.C.2.e.tex
+++ b/Lab 7/solutions/lab7/2.C.2.e.tex
@@ -1,2 +1,2 @@
-DHCP Discover tries to discover a DHCP server in the network. This is sent by a DHCP client when it wants to recieve an ip address. DHCP Offer is sent by the server. This packet offers an ip address to the host which sent the DHCP Discover packet. \\
-The client recieves the DHCP Offer packet, and sends a DHCP Request packet for that ip address. Finally, after the server recieves teh DHCP Request packet, it sends a DHCP ACK packet to confirm the ip address assignment to the client.
+DHCP Discover tries to discover a DHCP server in the network. This is sent by a DHCP client when it wants to recieve an IP address. DHCP Offer is sent by the server. This packet offers an IP address to the host which sent the DHCP Discover packet. \\
+The client recieves the DHCP Offer packet, and sends a DHCP Request packet for that IP address. Finally, after the server recieves the DHCP Request packet, it sends a DHCP ACK packet to confirm the IP address assignment to the client.
