--- a/Lab 7/solutions/lab7/2.C.4.b.tex
+++ b/Lab 7/solutions/lab7/2.C.4.b.tex
@@ -1,1 +1,1 @@
-Yes, the ip addresses are assigned to the hosts in order. PC1 requested an ip address first, so it recieved the first available address $10.0.1.2$. PC4 requested an ip address afterwards, and therefore recieves the second available address $10.0.1.3$.
+Yes, the IP addresses are assigned to the hosts in order. PC1 requested an IP address first, so it recieved the first available address $10.0.1.2$. PC4 requested an IP address afterwards, and therefore recieves the second available address $10.0.1.3$.
