--- a/Lab 7/solutions/lab7/2.C.a.tex
+++ b/Lab 7/solutions/lab7/2.C.a.tex
@@ -2,4 +2,4 @@
 \newline
 \href{https://en.wikipedia.org/wiki/File:DHCP_session.svg}{\color{red}\textit{Source: Wikipedia}}
 
-Firstly, the client sends a Discover packet in order to notify the DHCP server it wants an ip address. Secondly, the server sends an Offer packet, which offers an ip address to the client. After recieving the Offer packet, the client sends a Request packet for the offered ip address. Lastly the server sends an Ack packet to confirm the ip address assignment of the client.
+Firstly, the client sends a Discover packet in order to notify the DHCP server it wants an IP address. Secondly, the server sends an Offer packet, which offers an IP address to the client. After recieving the Offer packet, the client sends a Request packet for the offered IP address. Lastly the server sends an Ack packet to confirm the ip address assignment of the client.
