--- a/Lab 7/solutions/prelab7/3.d.tex
+++ b/Lab 7/solutions/prelab7/3.d.tex
@@ -1,1 +1,1 @@
-Port address translation (PAT) is the mapping of a single public IP address with multiple ports to multiple local/private addresses. As explained before, this is the most common application of NAT, and used in most SOHO setups.
+Port address translation (PAT) is the mapping of a single public IP address with multiple ports to multiple local/private addresses and ports. As explained before, this is the most common application of NAT, and used in most SOHO setups.
