--- a/Lab 7/solutions/prelab7/6.c.tex
+++ b/Lab 7/solutions/prelab7/6.c.tex
@@ -1,1 +1,1 @@
-The postrouting chain is responsible for the incoming packets, before the routing decision has been made.
+The prerouting chain is responsible for the incoming packets, before the routing decision has been made.
