--- a/Lab 7/solutions/lab7/1.C.d.tex
+++ b/Lab 7/solutions/lab7/1.C.d.tex
@@ -1,1 +1,1 @@
-Because the destination of the packet will be present in its nat table, meaning that PC2 can translate the packet to an address in the private network.
+Because the destination of the packet will be present in its NAT table, meaning that PC2 can translate the packet to an address in the private network.
