--- a/Lab 7/solutions/prelab7/7.a.tex
+++ b/Lab 7/solutions/prelab7/7.a.tex
@@ -1,1 +1,3 @@
-iptables -t nat -A POSTROUTING -j MASQUERADE -o eth1 -s 10.0.1.0/24 -d 128.143.136.80
+\begin{cmdblock}
+> iptables -t nat -A POSTROUTING -j MASQUERADE -o eth1 -s 10.0.1.0/24 -d 128.143.136.80
+\end{cmdblock}
