--- a/Lab 7/solutions/prelab7/7.b.tex
+++ b/Lab 7/solutions/prelab7/7.b.tex
@@ -1,1 +1,3 @@
-ip nat inside source static 10.0.1.0/24 128.143.136.80
+\begin{cmdblock}
+> ip nat inside source static 10.0.1.0/24 128.143.136.80
+\end{cmdblock}
